<resources>
    <string name="app_name">Birzeit University Student Hub</string>
    <string name="schedule_meeting">Schedule a Meeting</string>
    <string name="join_study_group">Join a Study Group</string>
    <string name="resources">Resources</string>
    <string name="campus_map">Campus Map</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="my_schedule">My Schedule</string>
    <string name="study_groups">Study Groups</string>
    <string name="navigation_resources">Resources</string>
    <string name="navigation_more">More</string>

        <string name="select_meeting_type">Select Course Type</string>
        <string name="enter_time">Enter Time</string>
        <string name="enter_url">Enter URL</string>
        <string name="enter_description">Enter Description</string>
        <string name="add_button_label">Add</string>


</resources>
