<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Spinner for selecting meeting type -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/meeting_types"
        android:prompt="@string/select_meeting_type" />

    <!-- Button to open date picker -->
    <Button
        android:id="@+id/openDatePickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Date"
        android:layout_below="@id/spinner"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- TextView to display the selected date -->
    <TextView
        android:id="@+id/selectedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected Date: "
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_below="@id/openDatePickerButton"
        android:layout_centerHorizontal="true"/>

    <!-- EditText for entering time -->
    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectedDateTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_time" />

    <!-- EditText for entering URL -->
    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_url"/>

    <!-- EditText for entering description -->
    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/urlEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_description"/>

    <!-- Button to add the meeting -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_label"
        android:layout_below="@id/descriptionEditText"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
